--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -23,11 +23,11 @@
 </head>
 <table id="main" style="margin: 0 auto;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;">
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;background: #666 url(images/email-templates_01.jpg);width: 582px;height: 95px;"></td>
+		<td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;background: #666 url({{skin url="images/email/email-templates_01.jpg" _area='frontend'}}) width: 582px;height: 95px;"></td>
 	</tr>
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-			<img src="images/email-templates_02.jpg" width="582" height="88" alt="" style="margin: 0;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;"></td>
+			<img src="{{skin url="images/email/email-templates_02.jpg" _area='frontend'}}" width="582" height="88" alt="" style="margin: 0;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;"></td>
 	</tr>
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
