--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -163,9 +163,9 @@ if (!$categoryIds == null){
 					               success: function(x){
 					                 //alert('price is now set to: ' + x);
 					                 //var offset = -<?php echo $fbinc; ?>;
-					                 jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
+					                 console.log('liked'); jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
 
-					                 jQuery('.currentPrice').find('span:last').text('$'+<?php echo number_format($fbprice - $fbinc, 2); ?>);
+					                 jQuery('.currentPrice').find('span:last').text('-$'+<?php echo number_format($fbprice - $fbinc, 2); ?>);
 									
 						             //alert('<?php echo '$' . number_format($fbprice, 2); ?>');
 					               },
@@ -211,7 +211,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					<p class="currentPrice">Current Price:<span>
 					<?php if (!$fbprice == null) { ?>
 					<?php echo '$' . number_format($fbprice,2); } else { ?>
-					<?php echo '$' . number_format($_product->getSpecialprice(), 2);$fbprice = number_format($_product->getSpecialprice(), 2); } ?></span></p>
+					<?php $fbprice = number_format($_product->getSpecialprice(), 2);echo '$' . $fbprice; } ?></span></p>
 					<a href="#" onclick="window.open('/size-chart', 'a', 'width=500, height=400, scrollbars=0, resizable=0')" class="sizeChart fr">Size Chart</a>
 
 					<br class="clear">
