--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -338,7 +338,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
                dataType: "html",
                success: function(x){
                  //alert('price is now set to: ' + x);
-                var newPrice = fbOffset - fbPriceJS;
+                var newPrice = fbPriceJS - fbOffset;
 console.log(newPrice);
               jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
                  jQuery('.currentPrice').find('span:last').text(' $'+ newPrice);
