checkout thumbnails on review

--- a/app/design/frontend/default/rooja/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/review/info.phtml
@@ -40,7 +40,7 @@
         <thead>
             <tr>
 				<th rowspan="<?php echo $rowspan ?>">
-				<?php if ($this->hasProductUrl()):?><a href="<?php echo $this->getProductUrl() ?>" title="<?php echo $this->htmlEscape($this->getProductName()) ?>" class="product-image"><?php endif;?><img src="<?php echo $this->getProductThumbnail()->resize(75); ?>" width="45" height="45" alt="<?php echo $this->htmlEscape($this->getProductName()) ?>" /><?php if ($this->hasProductUrl()):?></a><?php endif;?>
+				<img src="<?php echo $this->getProductThumbnail()->resize(75); ?>" width="45" height="45" alt="<?php echo $this->htmlEscape($this->getProductName()) ?>" /><?php if ($this->hasProductUrl()):?>
 				</th>
 					
                 <th rowspan="<?php echo $rowspan ?>"><?php echo $this->__('Product Name') ?></th>
