checkout cart image

--- a/app/design/frontend/default/default/layout/oneclickcartcheckout-backup.xml
+++ b/app/design/frontend/default/default/layout/oneclickcartcheckout-backup.xml
@@ -61,9 +61,9 @@
              
 				    <block type="checkout/onepage_review" name="checkout.onepage.reviewd" as="review" template="oneclickcartcheckout/review.phtml">
 				              <block type="checkout/onepage_review_info" name="info"  template="checkout/onepage/review/info.phtml">
-				            	<action method="addItemRender"><type>simple</type><block>checkout/cart_item_renderer</block><template>checkout/cart/item/default.phtml</template></action>
-				                <action method="addItemRender"><type>grouped</type><block>checkout/cart_item_renderer_grouped</block><template>checkout/cart/item/default.phtml</template></action>
-				                <action method="addItemRender"><type>configurable</type><block>checkout/cart_item_renderer_configurable</block><template>checkout/cart/item/default.phtml</template></action>
+				            <action method="addItemRender"><type>default</type><block>checkout/cart_item_renderer</block><template>oneclickcartcheckout/checkout/review/item.phtml</template></action>
+				            <action method="addItemRender"><type>grouped</type><block>checkout/cart_item_renderer_grouped</block><template>oneclickcartcheckout/checkout/review/item.phtml</template></action>
+				            <action method="addItemRender"><type>configurable</type><block>checkout/cart_item_renderer_configurable</block><template>oneclickcartcheckout/checkout/review/item.phtml</template></action>
 				            <block type="checkout/cart_totals" name="checkout.onepage.review.info.totals" as="totals" template="checkout/onepage/review/totals.phtml"/>
 				            <block type="core/text_list" name="checkout.onepage.review.info.items.before" as="items_before" translate="label">
 				                <label>Items Before</label>
