--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -32,7 +32,7 @@
 
 ?>
 <?php if ($this->getIsNeedToDisplaySideBar()):?>
-<div class="block block-cart">
+<div class="block block-cart" id="sidebarCart">
     <?php $_cartQty = $this->getSummaryCount() ?>
     <div class="block-title">
         <strong><span><?php echo $this->__('My Cart') ?></span></strong>
