style order review

--- a/app/design/frontend/default/rooja/template/checkout/onepage/review/totals.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/review/totals.phtml
@@ -35,7 +35,7 @@
     <?php echo $this->renderTotals('footer', $_colspan); ?>
     <?php if ($this->needDisplayBaseGrandtotal()):?>
     <tr>
-        <td class="a-right" colspan="<?php echo $_colspan + 1; ?>">
+        <td class="a-right" colspan="4">
             <small><?php echo $this->helper('sales')->__('Your credit card will be charged for') ?></small>
         </td>
         <td class="a-right">
