style order review

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -311,6 +311,10 @@ ul#myAccount li ul li a:hover{
 
 /* ----- CHECKOUT ---- */
 td .product-name { width: 130px;}
+.item-options {
+	font-size: 12px;
+	line-height: 18px;
+	}
 
 
 /* ~~~~~ FOOTER ~~~~~ */
