--- a/app/design/frontend/default/rooja/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/review/info.phtml
@@ -41,7 +41,7 @@
                 <th colspan="2" rowspan="<?php echo $rowspan ?>"><?php echo $this->__('Product Name') ?></th>
                 <th colspan="<?php echo $colspan ?>" class="a-center"><?php echo $this->__('Price') ?></th>
                 <th rowspan="<?php echo $rowspan ?>" class="a-center"><?php echo $this->__('Qty') ?></th>
-                <th colspan="<?php echo $colspan ?>"><?php echo $this->__('Subtotal') ?></th>
+                <th colspan="<?php echo $colspan ?>" style="text-align:right;"><?php echo $this->__('Subtotal') ?></th>
             </tr>
             <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
                 <tr>
