modifying login page

--- a/app/design/frontend/default/rooja/template/customer/form/unapproved.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/unapproved.phtml
@@ -35,11 +35,11 @@
 <div class="wrapper">
 <header id="mainHeader">
 	<h1 id="logo" class="tr">Rooja</h1>
-	<p id="highlight" class="tr">Apparel and accessories from leading International and Indian designers at prices you just can’t get in the stores</p>
+	<p id="highlight" class="tr">Member&rsquo;s only shopping club. Save up to 60% off retail.</p>
 </header><!--End Header-->
 <section id="content" class="body">
-        <h2 class="legend"><?php echo $this->__('You account is not approved') ?></h2>
-		<p>We'll be in touch soon</p>	
+        <h2 class="tr" id="waitingList">You are on the waiting list</h2>
+		<p>We are currently rolling out out submissions to new users. In the meantime, check us out on twitter and facebook.</p>	
 		
 </section><!--End Content-->
 </div>
