style order review

--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -23,7 +23,7 @@
 </head>
 <table id="main" style="margin: 0 auto;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;">
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;background: #666 url({{skin url="images/email/email-templates_01.jpg" _area='frontend'}}); width: 582px;height: 95px;"></td>
+		<td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse; width: 582px;height: 95px;"><a href="http://rooja.com"><img src="{{skin url="images/email/email-templates_01.jpg" _area='frontend'}}" alt="Rooja Fashion"></a></td>
 	</tr>
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
@@ -86,7 +86,7 @@
 	                           </td>
 	                       </tr>
 	                       </tbody>
-	                   </table>
+
 	                   <br/>
 	                   {{/depend}}
 	                   {{layout handle="sales_email_order_items" order=$order}}
