style order review

--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -86,7 +86,7 @@
 	                           </td>
 	                       </tr>
 	                       </tbody>
-
+	                   </table>
 	                   <br/>
 	                   {{/depend}}
 	                   {{layout handle="sales_email_order_items" order=$order}}
