modifying login page

--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -39,7 +39,7 @@
 			<li><a href="#" id="getInvitedTab" class="tr">Get Invited</a></li>
 		</ul>
 	</nav>
-<header id="mainHeader">
+<header id="mainHeader" class="clear">
 	<h1 id="logo" class="tr">Rooja</h1>
 	<p id="highlight" class="tr">Member&rsquo;s only shopping club. Save up to 60% off retail.</p>
 </header><!--End Header-->
