modifying login page

--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -83,7 +83,7 @@
 		<li><a href="http://blog.rooja.com">Blog</a></li>
 	</ul>
 	
-	<div id="socialLinks">
+	<div id="socialLinks" class="fr">
 		<a href="http://www.twitter.com/roojafashion" title="follow rooja on twitter" target="_blank" id="twitter" class="tr">Follow us on Twitter</a>
 		
 		<article id="fbLikes">
