--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -23,14 +23,14 @@ body{
     margin:50px auto 0;
 }
 
-#loginTabs{margin:-45px 0 15px -15px;}
+#loginTabs{margin:-45px 0 0px -15px;}
 #loginTabs ul li{display:inline;}
 #loginTabs ul li a{float:left;margin-right:1px;width:90px;height:30px;}
 #loginTabs ul li a.selected{background-position:bottom left;}
 #loginTabs ul li a#loginTab{background-image:url(../images/splash/btns/login.png);}
 #loginTabs ul li a#getInvitedTab{background-image:url(../images/splash/btns/get-invited.png);}
 
-
+#mainHeader.login{padding-top:15px;}
 h1#logo{
     background-image:url(../images/splash/rooja-logo.png);
     width:179px;height:85px;
